[gd_scene load_steps=13 format=3 uid="uid://bbqqs4brsd23k"]

[ext_resource type="Script" path="res://Entity/Player/player.gd" id="1_cbrqq"]
[ext_resource type="PackedScene" uid="uid://rcyqt17sqkp2" path="res://Interactables/PlayerInteractRay/interaction_ray.tscn" id="2_8cbfn"]
[ext_resource type="Script" path="res://Movement Component/CustomMovementComponent.gd" id="2_y4nyf"]
[ext_resource type="Script" path="res://Entity/Player/WeaponManager.gd" id="4_a613w"]
[ext_resource type="Texture2D" uid="uid://cvcsvgbkqljug" path="res://Interactables/PlayerInteractRay/PlayerCrosshair.png" id="4_appc5"]
[ext_resource type="Environment" uid="uid://2r1c6tyl1w8d" path="res://World/World_Environment.tres" id="4_wlf5a"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_qw15f"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_natrj"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_e45vv"]
height = 1.0

[sub_resource type="Animation" id="Animation_7wwhi"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerCapsule:shape:height")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [2.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PlayerCapsule:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("head:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0.8, 0)]
}

[sub_resource type="Animation" id="Animation_xh6gg"]
resource_name = "crouch"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerCapsule:shape:height")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [2.0, 1.5]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = false
tracks/1/path = NodePath("PlayerCapsule:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, -0.25, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("head:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0.8, 0), Vector3(0, 0.55, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_h22yx"]
_data = {
"RESET": SubResource("Animation_7wwhi"),
"crouch": SubResource("Animation_xh6gg")
}

[node name="Player" type="CharacterBody3D"]
collision_layer = 2
collision_mask = 17
script = ExtResource("1_cbrqq")

[node name="PlayerMesh" type="MeshInstance3D" parent="."]
mesh = SubResource("CapsuleMesh_qw15f")

[node name="PlayerCapsule" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_natrj")

[node name="head" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.8, 0)

[node name="MainCam" type="Camera3D" parent="head"]
cull_mask = 1048063
environment = ExtResource("4_wlf5a")
current = true
fov = 90.0

[node name="InteractionRay" parent="head" instance=ExtResource("2_8cbfn")]
interact_range = -2.5

[node name="WeaponManager" type="Node3D" parent="head"]
transform = Transform3D(0.986176, -0.153593, -0.0621802, 0.16521, 0.940293, 0.29758, 0.0127615, -0.303739, 0.95267, 0.515633, -0.406104, -0.622459)
script = ExtResource("4_a613w")

[node name="SubViewportContainer" type="SubViewportContainer" parent="head/WeaponManager"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="SubViewport" type="SubViewport" parent="head/WeaponManager/SubViewportContainer"]
transparent_bg = true
handle_input_locally = false
size = Vector2i(1152, 648)
render_target_update_mode = 4

[node name="WeaponCamera" type="Camera3D" parent="head/WeaponManager/SubViewportContainer/SubViewport"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.8, 0)
cull_mask = 512
environment = ExtResource("4_wlf5a")
fov = 90.0

[node name="CustomMovementComponent" type="Node" parent="." node_paths=PackedStringArray("actor", "uncrouch_space")]
script = ExtResource("2_y4nyf")
actor = NodePath("..")
uncrouch_space = NodePath("../CrouchShapeCast")

[node name="CrouchShapeCast" type="ShapeCast3D" parent="."]
enabled = false
shape = SubResource("CapsuleShape3D_e45vv")
target_position = Vector3(0, 0.5, 0)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_h22yx")
}

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="PlayerCrosshair" type="TextureRect" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -24.0
offset_top = -25.0
offset_right = 24.0
offset_bottom = 25.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("4_appc5")
expand_mode = 1

[connection signal="end_colliding" from="head/InteractionRay" to="." method="_on_interaction_ray_end_colliding"]
[connection signal="start_colliding" from="head/InteractionRay" to="." method="_on_interaction_ray_start_colliding"]
